--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,9 @@ jobs:
             date
 
 workflows:
-  notify_app:
+  db_healthcheck_app:
     jobs:
       - build
-    triggers:
-      - schedule:
-          cron: "30 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23 * * *"
           filters:
             branches:
               only:
