--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,10 @@ jobs:
 workflows:
   db_healthcheck_app:
     jobs:
-      - build:
+      - build
+    triggers:
+      - schedule:
+          cron: "45 3,4,5,6,7,8,9,10,11,12,17 * * *"
           filters:
             branches:
               only:
